[project]
name = "hacbo_gsm8k_experiment"
version = "1.0.0"
description = "Hydra-managed HACBO / BLAC experiments on GSM8K with Qwen3-0.6B"
requires-python = ">=3.10"

dependencies = [
    "torch>=2.2.0",
    "transformers>=4.40.0",
    "datasets>=2.18.0",
    "hydra-core>=1.3.2",
    "wandb>=0.16.0",
    "optuna>=3.5.0",
    "seaborn>=0.13.0",
    "matplotlib>=3.8.0",
    "pandas>=2.2.0",
    "numpy>=1.26.0",
    "scikit-learn>=1.4.0",
    "scipy>=1.12.0",
    "pynvml>=11.5.0",
]
